<resources>
    <string name="app_name" translatable="false">AgriCircle</string>
     <string-array name="languages">

         <item>English</item>
         <item>German</item>
         <item>Danish</item>

     </string-array>

    <string-array name="maptypes">

        <item>Normal</item>
        <item>Hybrid</item>
        <item>Sattelite</item>

    </string-array>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="loadingWeather">Loading weather</string>
    <string name="maptype">MapType</string>
    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="modalTitle">Please Confirm</string>
    <string name="modalText">Are you sure, you want to logout from Agricircle?</string>
    <string name="buttonLogout">Logout</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonOK" translatable="false">OK</string>
    <string name="languageUpdated">Language Updated</string>
    <string name="today">Today</string>
    <string name="fivedays">5 Days</string>
    <string name="fourteendays">14 Days</string>
    <string name="activities">Activities</string>
    <string name="fieldlist">Field List</string>
    <string name="usercreated">Your user account was created. Please visit the agricircle website to reset your password and login.</string>
    <string name="usercreatedTitle">Account created</string>
    <string name="gotosite">Forgot password?</string>
    <string name="gotologon">Login</string>
    <string name="wronglogin">Wrong email or password</string>
    <string name="permissiontitle">Location Permission Needed</string>
    <string name="permissiontext">This app needs the Location permission, please accept to use location functionality</string>
    <string name="locationtext">Free roam active. Press button to return to your location</string>
    <string name="myLocation">My Location</string>
    <string name="modalDrawTitle">Markers found!</string>
    <string name="modalDrawText">Markers found, do you wish to draw a polygon from the markers or to delete them?</string>
    <string name="modalDrawButton">Draw polygon</string>
    <string name="modalDrawDelete">Delete markers</string>
    <string name="createField">Create Field</string>
    <string name="Draw">Draw</string>
    <string name="drawMode">Drawmode active!</string>
    <string name="notEnoughMarkers">Not enough markers!</string>
    <string name="notEnoughMarkersText">Only 2 markers were found, please delete them and start over again.</string>
    <string name="required">Required</string>
    <string name="emailalreadypresent">Email already in system</string>
    <string name="emailregex">Please enter an emailadress</string>
    <string name="field">Field</string>
    <string name="crop">Crop</string>
    <string name="createActivity">Please fill in all needed information, to create a new activity</string>
    <string name="fieldhasnocrop">The selected field has no croprotations</string>
    <string name="bbch01">Pre-seeding</string>
    <string name="afterharvest">After Harvest</string>
    <string name="weatherdata">Weatherdata</string>
    <string name="offline">Offlinemode</string>
    <string name="permissiontextnetwork">This app needs internet to be able to login</string>
    <string name="networkrequired">This operation requires network</string>
    <string name="darkmode">Darkmode</string>
    <string name="ferMode">Fertilization mode</string>
    <string name="unitPref">Unit preferences</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="sugestedspeed">Suggested:</string>
    <string name="soilzones">Soil zones</string>
    <string name="yourspeed">Your speed:</string>
    <string name="dark">Dark</string>
    <string name="speed">Speed</string>
    <string name="nozzle">Nozzle %</string>
    <string name="notOnField">You are currently not in the marked field. GPS tracking not active</string>
    <string name="GPSActive">GPS Tracking active</string>
    <string name="GPSStarting">GPS Tracking starting</string>
    <string name="newActivity">Create new Activity</string>
    <string name="nozzleOutput">Nozzle output:</string>
    <string name="tracking">GPS Tracking</string>

    <string-array name="Metric">



        <item>t_2m:C</item>
        <item>t_max_2m_3h:C</item>
        <item>t_min_2m_3h:C</item>
        <item>precip_6h:mm</item>
        <item>wind_speed_10m:kmh"</item>
        <item>wind_dir_10m:d"</item>
        <item>weather_symbol_1h:idx</item>



    </string-array>
    <string-array name="Imperial">


        <item>t_2m:F</item>
        <item>t_max_2m_3h:F</item>
        <item>t_min_2m_3h:F</item>
        <item>precip_6h:mm</item>
        <item>wind_speed_10m:mph"</item>
        <item>wind_dir_10m:d"</item>
        <item>weather_symbol_1h:idx</item>

    </string-array>




</resources>
