<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Create Activity"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/StandardKnapFarve"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infotextactivity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="clip_horizontal|center"
                    android:text="@string/createActivity"
                    android:textSize="18sp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/choosefield"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/textedit_custom"
                        android:hint="@string/field"
                        android:textColor="@color/white"
                        android:textColorHint="#05ab9a"
                        app:met_floatingLabel="normal" />

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/choosecrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/textedit_custom"
                        android:hint="@string/crop"
                        android:textColor="@color/white"
                        android:textColorHint="#05ab9a"
                        app:met_floatingLabel="normal" />

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/chooseactivitytype"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/textedit_custom"
                        android:hint="Activity"
                        android:textColor="@color/white"
                        android:textColorHint="#05ab9a"
                        app:met_floatingLabel="normal" />

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/chooseactivitycategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/textedit_custom"
                        android:hint="Category"
                        android:textColor="@color/white"
                        android:textColorHint="#05ab9a"
                        app:met_floatingLabel="normal" />
                </LinearLayout>

            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/weather_button"
                android:text="Create Activity"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>