<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        app:srcCompat="@drawable/agronomist" />

                    <TextView
                        android:id="@+id/fieldnameRun"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Main Field"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/RunType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/activity_run_background"
                        android:gravity="center"
                        android:text="Fertilization"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical">


                        <Chronometer
                            android:id="@+id/timer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"></Chronometer>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            tools:visibility="visible">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="90dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="90dp"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:id="@+id/imageView7"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginRight="5dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/activity_run_background"
                                    android:gravity="center">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/textView13"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="@string/yourspeed"
                                            android:textColor="@color/white"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/yourSpeed"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="3dp"
                                            android:gravity="center"
                                            android:text="12 KM/h"
                                            android:textColor="@color/white" />
                                    </LinearLayout>
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/suggestedView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="5dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/activity_run_background"
                                    android:gravity="center"

                                    android:textColor="@color/white"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    app:srcCompat="@drawable/speechbubble">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/textView15"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text="@string/sugestedspeed"
                                            android:textColor="@color/white"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/textView14"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_marginBottom="3dp"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text="12 KM/h"
                                            android:textColor="@color/white" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            tools:visibility="visible">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                tools:visibility="visible">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1.5"
                                    android:orientation="horizontal"></LinearLayout>

                                <LinearLayout
                                    android:id="@+id/nozzleLay"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="1"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical"
                                        tools:visibility="visible">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:orientation="vertical"></LinearLayout>

                                        <TextView
                                            android:id="@+id/textView11"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="Nozzle output:"
                                            android:textColor="@color/white"
                                            android:textStyle="bold" />

                                        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                                            android:id="@+id/nozzleoutput"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_marginTop="2dp"
                                            android:layout_marginBottom="2dp"
                                            android:layout_weight="1"

                                            android:textSize="12sp"
                                            app:checkedBackgroundColor="@color/colorPrimary"
                                            app:textToggleLeft="5%"
                                            app:textToggleRight="10%" />

                                    </LinearLayout>
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/speedLay"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:orientation="horizontal"
                                    tools:visibility="gone">

                                    <ImageView
                                        android:id="@+id/imageView5"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        app:srcCompat="@drawable/tractor_green" />

                                    <ImageView
                                        android:id="@+id/imageView4"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        app:srcCompat="@drawable/tractor_yellow" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1.5"
                                    android:orientation="vertical">

                                    <Button
                                        android:id="@+id/locationButtonActivityRun"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="30dp"
                                        android:layout_marginTop="30dp"
                                        android:layout_marginRight="30dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/mylocation" />

                                    <TextView
                                        android:id="@+id/textView10"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="3"
                                        android:gravity="center"
                                        android:text="@string/myLocation"
                                        android:textColor="@color/white" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/finishButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weather_button_yellow"
                android:text="Finish"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:background="@drawable/weather_button"
                android:text="Pause"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/GPSLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="5.3"
            android:alpha="0.8"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/activityStatusText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/notOnField"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>